img description update

--- a/index.html
+++ b/index.html
@@ -16,24 +16,27 @@
 </head>
 
 <body>
-<section>
-    <header>
-        <img src="images/logo.svg" alt="">
-    </header>
-    <div class="container">        
-        <div class="col-left">
-            <h1><span>We're</span><br>coming<br> soon</h1>
-            <p>Hello fellow shoppers! We're currently building our new fashion store. Add your email below to stay up-to-date with announcements and our launch deals.</p>
-            <form id="newsletter-form" autocomplete="off">
-                <input type="email" id="email" name="email" placeholder="Email Address">
-                <button><img src="images/icon-arrow.svg" alt=""></button>
-                <p class="error-msg"></p>
-            </form>
-        </div>
-        <div class="col-right">
-        </div>
-    </div>    
-</section>
+    <main>
+        <section>
+            <header>
+                <img src="images/logo.svg" alt="Logo">
+            </header>
+            <div class="container">
+                <div class="col-left">
+                    <h1><span>We're</span><br>coming<br> soon</h1>
+                    <p>Hello fellow shoppers! We're currently building our new fashion store. Add your email below to
+                        stay up-to-date with announcements and our launch deals.</p>
+                    <form id="newsletter-form" autocomplete="off">
+                        <input type="email" id="email" name="email" placeholder="Email Address">
+                        <button><img src="images/icon-arrow.svg" alt="Button arrow"></button>
+                        <p class="error-msg"></p>
+                    </form>
+                </div>
+                <div class="col-right">
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="js/main.js"></script>
 </body>
 
